test/fails/bad_functions/auto1.lgl
int f(auto x) {
    return x;
}

void main() {
    print f(5);
}